--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,5 +36,5 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
          - { path: ^/secret-page/login-for-admin/admin, roles: ROLE_ADMIN }
-#         - { path: ^/secret-page/register-for-admin/register, roles: ROLE_ADMIN }
+         - { path: ^/secret-page/register-for-admin/register, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
